--- a/source/styles/blocks/styles.scss
+++ b/source/styles/blocks/styles.scss
@@ -9,3 +9,7 @@
 @use "partners.scss";
 @use "templates.scss";
 @use "map-catalog";
+@use "catalog-form.scss";
+@use "catalog-sort.scss";
+@use "catalog-cards.scss";
+@use "catalog-pagin.scss";
