добавляет header-catalog.html  для border-bottom у ссылки активной страницы

--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -42,7 +42,7 @@
 		opacity: 30%;
 	}
 
-	&__link-current {
+	&__link--current {
 		color: $base-color-text;
 		border-bottom: 2px solid $base-background-main;
 		opacity: 100%;
