--- a/source/html/layout/header-catalog.html
+++ b/source/html/layout/header-catalog.html
@@ -13,13 +13,13 @@
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item">
-						<a class="navigation__link navigation__link--current">Студия</a>
+						<a class="navigation__link" href="./../../index.html">Студия</a>
 					</li>
 					<li class="navigation__item">
 						<a class="navigation__link" href="#">Клиенты</a>
 					</li>
 					<li class="navigation__item">
-						<a class="navigation__link" href="./../../catalog.html" target="_blank">Магазин</a>
+						<a class="navigation__link navigation__link--current">Магазин</a>
 					</li>
 					<li class="navigation__item">
 						<a class="navigation__link" href="#">Контакты</a>
