--- a/source/styles/blocks/styles.scss
+++ b/source/styles/blocks/styles.scss
@@ -12,4 +12,4 @@
 @use "catalog-form.scss";
 @use "catalog-sort.scss";
 @use "catalog-cards.scss";
-@use "catalog-pagin.scss";
+@use "catalog-pagination.scss";
