--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -27,10 +27,12 @@ $base-background-shape: #4D4D4D;
 $special-color-icons: rgba(250,250,250,0.3);
 $special-color-box-shadow: rgba(0, 0, 0, 0.4);
 $special-color-pagination-btn: #C1C1C1;
+$special-color-btn-active: rgba(0, 0, 0, 0.3);
 
 $special-border-modal-form: #D7DCDE;
 $special-modal-placeholder: #444444;
 $special-modal-hover: #B4B9BB;
+$special-pagin-btn-border: #DBDBDB;
 
 $tablet: 768px;
 $desktop: 1680px;
